<resources>

    <!-- Spotify SDK -->
    <string name="spotify_client_id" translatable="false">058c796e8b3740d190136f2ebc4d64ab</string>
    <string name="spotify_auth_redirect_uri" translatable="false">io.libzy://spotify-auth</string>

    <!-- Room DB -->
    <string name="database_file_name" translatable="false">libzy_database</string>
    
    <!-- Notification Channels -->
    <string name="library_sync_progress_notification_channel_id" translatable="false">channel_library_sync_progress</string>
    <string name="library_sync_progress_notification_channel_name">Library Sync Progress</string>
    <string name="library_sync_progress_notification_channel_description">Displays the progress while syncing your Spotify library</string>
    <string name="library_sync_update_notification_channel_id" translatable="false">channel_library_sync_update</string>
    <string name="library_sync_update_notification_channel_name">Library Sync Update</string>
    <string name="library_sync_update_notification_channel_description">Notifies you when a sync of your Spotify library succeeds or fails</string>

    <!-- Notifications -->
    <string name="initial_library_sync_notification_title">Syncing your Spotify library…</string>
    <string name="initial_library_sync_succeeded_notification_title">Finished syncing your Spotify library!</string>
    <string name="initial_library_sync_succeeded_notification_text">Ready to find something to listen to?</string>
    <string name="initial_library_sync_failed_notification_title">There was a problem syncing your Spotify library!</string>
    <string name="initial_library_sync_failed_notification_text">Please try again.</string>

    <!-- Global UI -->
    <string name="cd_navigate_back">Navigate back</string>
    <string name="action_submit">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="no_network_connection">No network connection</string>
    <string name="connecting_to_spotify">Connecting to Spotify…</string>

    <!-- Connect Spotify Screen -->
    <string name="connect_spotify_button_text">Connect Spotify</string>
    <string name="welcome_to_libzy">Welcome to Libzy</string>
    <string name="your_digital_record_collection">Your digital record collection</string>
    <string name="getting_started">To get started, please connect your Spotify account</string>
    <string name="cd_libzy_icon">Libzy icon</string>
    <string name="snackbar_spotify_authorization_failed">Failed to authorize your Spotify account! Please try again.</string>
    <string name="snackbar_library_sync_failed">There was a problem syncing your Spotify library! Please try again.</string>
    <string name="syncing_library_heading">Syncing your Spotify library…</string>
    <string name="syncing_library_subheading">This may take a few minutes, so feel free to come back later</string>

    <!-- Expand Library Screen -->
    <plurals name="not_enough_albums_header">
        <item quantity="one">To give you valuable mood-based recommendations, we recommend saving %d more album to your Spotify library</item>
        <item quantity="other">To give you valuable mood-based recommendations, we recommend saving %d more albums to your Spotify library</item>
    </plurals>
    <string name="add_more_albums_header">Keep saving every album you like (or want to check out) to improve your experience.</string>
    <string name="add_more_albums_hint">Have a physical record collection? A great starting point is to save all your vinyl, CDs, or cassettes on Spotify</string>
    <string name="finish_saving_albums_button">ALL SET</string>
    <plurals name="albums_in_your_collection">
        <item quantity="zero">You have no albums in your collection</item>
        <item quantity="one">You have %d album in your collection</item>
        <item quantity="other">You have %d albums in your collection</item>
    </plurals>
    <string name="placeholder_album_title">Loading…</string>
    <string name="placeholder_album_artists">Please wait…</string>
    <string name="error_fetching_recommendations">There was a problem recommending albums</string>
    <string name="save_album_cd">save album</string>
    <string name="remove_album_cd">remove album</string>

    <!-- Onboarding Screen -->
    <string name="onboarding_header">Browsing your digital record collection</string>
    <string name="onboarding_step_1">Libzy will help you narrow down a large music library into recommended albums, based on your current mood.</string>
    <string name="onboarding_step_2">We\'ll ask you a series of questions about what you want to listen to.</string>
    <string name="onboarding_step_3">You can select "no preference" for any question.</string>
    <string name="onboarding_step_4">We\'ll recommend albums from your Spotify library based on your answers.</string>
    <string name="onboarding_step_5">Tap one of the recommended albums to start playing it on Spotify. It\'s that easy!</string>
    <string name="onboarding_step_6">Click the "start over" icon at any time to reset your answers and try a different mood.</string>
    <string name="onboarding_step_7">Click the settings icon at any time to customize which questions we ask you, or to manually re-sync your Spotify library.</string>
    <string name="next">NEXT</string>
    <string name="lets_go">LET\'S GO</string>

    <!-- Query Screen -->
    <string name="morning_greeting_text">Good morning!</string>
    <string name="afternoon_greeting_text">Good afternoon!</string>
    <string name="evening_greeting_text">Good evening!</string>
    <string name="query_instructions_text">What are you in the mood to listen to?</string>
    <string name="no_preference">No Preference</string>
    <string name="current_favorite">Current Favorite</string>
    <string name="underappreciated_gem">Underappreciated Gem</string>
    <string name="reliable_classic">Reliable Classic</string>
    <string name="positive_emotion">Positive Emotion</string>
    <string name="negative_emotion">Negative Emotion</string>
    <string name="acoustic">Acoustic</string>
    <string name="electric_electronic">Electric / Electronic</string>
    <string name="instrumental">Instrumental</string>
    <string name="vocal">Vocal</string>
    <string name="chill">Chill</string>
    <string name="energetic">Energetic</string>
    <string name="danceable">Danceable</string>
    <string name="arrhythmic">Arrhythmic</string>
    <string name="continue_button">Continue</string>
    <string name="ready_button">Ready, show me some albums!</string>
    <string name="search_genres">Search genres</string>
    <string name="cd_clear_search_query">Clear search query</string>
    <string name="no_genre_results">There are no genres from your library matching \"%s\".</string>
    <string name="spotify_attribution">All content sourced from Spotify.</string>

    <!-- Results Screen -->
    <string name="recommended_albums_title">Recommended Albums</string>
    <string name="toast_spotify_remote_failed">There was a problem playing this album remotely! Try using Spotify directly.</string>
    <string name="no_results_header">Oops!</string>
    <string name="no_results_description">We couldn\'t quite find the vibe right now. Try looking for something else or saving more albums on Spotify.</string>
    <string name="start_over">Start over</string>
    <string name="open_spotify">Open Spotify</string>
    <string name="cd_album_artwork">Album artwork</string>
    <string name="cd_filled_rating_star">Filled rating star</string>
    <string name="cd_unfilled_rating_star">Unfilled rating star</string>
    <string name="underappreciated_gems">Underappreciated Gems</string>
    <string name="reliable_classics">Reliable Classics</string>
    <string name="current_favorites">Current Favorites</string>
    <string name="underappreciated_genre">Underappreciated %s</string>
    <string name="reliable_genre_classics">Reliable %s Classics</string>
    <string name="current_genre_favorites">Current %s Favorites</string>
    <string name="full_match_category_title">Best Overall Match</string>
    <string name="electric_electronic_abbreviated">Electr(on)ic</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="rate_results">Rate Results</string>
    <string name="rate_results_prompt">How relevant are these recommended albums to your search? Your feedback is much appreciated!</string>
    <string name="results_feedback_placeholder">Optionally, provide a reason for your rating…</string>
    <string name="results_feedback_submitted">Thank you! Your feedback has been submitted.</string>

    <!-- Settings Screen -->
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_dialog_description">Are you sure you want to disconnect your Spotify account? The next time you log in with this account we will need to sync your entire library.</string>
    <string name="last_sync_date_label">Spotify library last synced:</string>
    <string name="sync">SYNC</string>
    <string name="manage_your_collection">Manage your collection:</string>
    <string name="add_more_albums">ADD MORE ALBUMS</string>
    <string name="ask_me_about">Ask me about:</string>
    <string name="familiarity_label">Familiarity</string>
    <string name="instrumentalness_label">Instrumental or Vocal</string>
    <string name="acousticness_label">Acoustic or Electric/Electronic</string>
    <string name="valence_label">Positive Emotion or Negative Emotion</string>
    <string name="energy_label">Energetic or Chill</string>
    <string name="danceability_label">Danceable or Arrhythmic</string>
    <string name="genres_label">Genres</string>
    <string name="unknown">Unknown</string>
    <string name="cd_spotify_logo">Spotify logo</string>

</resources>
