<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.query.QueryFragment">

    <TextView
        android:id="@+id/greeting_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_06"
        android:layout_marginTop="@dimen/spacing_04"
        android:text="@string/default_greeting_text"
        android:textSize="@dimen/heading_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_04"
        android:layout_marginTop="@dimen/spacing_04"
        android:text="@string/query_instructions_text"
        android:textSize="@dimen/subheading_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text" />


    <!-- Question 1: Familiarity -->

    <androidx.constraintlayout.widget.Group
        android:id="@+id/familiarity_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="current_favorite_button,reliable_classic_button,underappreciated_gem_button" />

    <Button
        android:id="@+id/current_favorite_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/spacing_04"
        android:layout_marginVertical="@dimen/spacing_02"
        android:text="@string/a_current_favorite"
        app:layout_constraintBottom_toTopOf="@+id/reliable_classic_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructions_text"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/reliable_classic_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/spacing_04"
        android:layout_marginVertical="@dimen/spacing_02"
        android:text="@string/a_reliable_classic"
        app:layout_constraintBottom_toTopOf="@+id/underappreciated_gem_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_favorite_button" />

    <Button
        android:id="@+id/underappreciated_gem_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/spacing_04"
        android:layout_marginVertical="@dimen/spacing_02"
        android:text="@string/an_underappreciated_gem"
        app:layout_constraintBottom_toTopOf="@id/no_preference_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reliable_classic_button" />


    <!-- Question 2: Instrumentalness -->

    <androidx.constraintlayout.widget.Group
        android:id="@+id/instrumentalness_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="instrumental_button,vocal_button" />

    <Button
        android:id="@+id/instrumental_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/spacing_04"
        android:layout_marginVertical="@dimen/spacing_02"
        android:text="@string/instrumental"
        app:layout_constraintBottom_toTopOf="@+id/vocal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructions_text"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/vocal_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/spacing_04"
        android:layout_marginVertical="@dimen/spacing_02"
        android:text="@string/vocal"
        app:layout_constraintBottom_toTopOf="@id/no_preference_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instrumental_button" />


    <!-- Question 3: Acousticness -->

    <androidx.constraintlayout.widget.Group
        android:id="@+id/acousticness_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="acoustic_label,electric_electronic_label,slider,continue_button" />

    <TextView
        android:id="@+id/acoustic_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_04"
        android:layout_marginEnd="@dimen/spacing_02"
        android:text="@string/acoustic"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintEnd_toStartOf="@id/slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/slider" />

    <TextView
        android:id="@+id/electric_electronic_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_02"
        android:layout_marginEnd="@dimen/spacing_04"
        android:text="@string/electric_electronic"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/slider"
        app:layout_constraintTop_toTopOf="@id/slider" />


    <!-- Question 4: Valence -->

    <androidx.constraintlayout.widget.Group
        android:id="@+id/valence_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="negative_emotion_label,positive_emotion_label,slider,continue_button" />

    <TextView
        android:id="@+id/negative_emotion_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_04"
        android:layout_marginEnd="@dimen/spacing_02"
        android:text="@string/negative_emotion"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintEnd_toStartOf="@id/slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/slider" />

    <TextView
        android:id="@+id/positive_emotion_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_02"
        android:layout_marginEnd="@dimen/spacing_04"
        android:text="@string/positive_emotion"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/slider"
        app:layout_constraintTop_toTopOf="@id/slider" />


    <!-- Question 5: Energy -->

    <androidx.constraintlayout.widget.Group
        android:id="@+id/energy_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="chill_label,energetic_label,slider,continue_button" />

    <TextView
        android:id="@+id/chill_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_04"
        android:layout_marginEnd="@dimen/spacing_02"
        android:text="@string/chill"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintEnd_toStartOf="@id/slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/slider" />

    <TextView
        android:id="@+id/energetic_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_03"
        android:layout_marginStart="@dimen/spacing_02"
        android:layout_marginEnd="@dimen/spacing_04"
        android:text="@string/energetic"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/slider"
        app:layout_constraintTop_toTopOf="@id/slider" />


    <!-- Question 6: Danceability -->

    <androidx.constraintlayout.widget.Group
        android:id="@+id/danceability_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="arrhythmic_label,danceable_label,slider,continue_button" />

    <TextView
        android:id="@+id/arrhythmic_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_04"
        android:layout_marginEnd="@dimen/spacing_02"
        android:text="@string/arrhythmic"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintEnd_toStartOf="@id/slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/slider" />

    <TextView
        android:id="@+id/danceable_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_02"
        android:layout_marginEnd="@dimen/spacing_04"
        android:text="@string/danceable"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/slider"
        app:layout_constraintTop_toTopOf="@id/slider" />


    <!-- Question 7: Genres -->

    <androidx.constraintlayout.widget.Group
        android:id="@+id/genre_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="genre_chips_scroll_view,ready_button" />

    <ScrollView
        android:id="@+id/genre_chips_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_04"
        app:layout_constraintBottom_toTopOf="@+id/ready_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructions_text">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genre_chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="@dimen/spacing_04"
            app:chipSpacingHorizontal="@dimen/spacing_02"
            app:chipSpacingVertical="@dimen/spacing_01">

            <!-- Uncomment these chips to see sample genre options that shouldn't actually be inflated -->

            <!--
            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hip hop" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="jazz" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="psychedelic rock" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="indie soul" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="dream pop" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="art rock" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="grunge" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="chillwave" />

            -->

        </com.google.android.material.chip.ChipGroup>

    </ScrollView>

    <Button
        android:id="@+id/ready_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_04"
        android:text="@string/ready_button"
        app:layout_constraintBottom_toTopOf="@id/no_preference_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre_chips_scroll_view" />


    <!-- The views below are used by all slider questions -->

    <!-- TODO: find a way to make slider take up remaining space -->
    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:value="0.5"
        app:labelBehavior="gone"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructions_text"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_04"
        android:text="@string/continue_button"
        app:layout_constraintBottom_toTopOf="@id/no_preference_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider" />


    <!-- The view below is used by all questions -->

    <Button
        android:id="@+id/no_preference_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_04"
        android:text="@string/no_preference"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- The view below is used by all questions except first -->

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_03"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/back_button"
        android:padding="@dimen/spacing_03"
        android:src="@drawable/back_button"
        app:layout_constraintBottom_toBottomOf="@id/greeting_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/greeting_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
